# crop_img_ros

./: CMakeLists.txt  README.md  package.xml
cfg/: masker.cfg
include/masker_util/: masker_util.hpp  masker_util_node.hpp
launch/: masker_util.launch  masker_util_mono.launch  masker_util_stereo.launch
param/: camLeft.yaml  camRight.yaml
src/: masker_util.cpp  masker_util_node.cpp
